# Tic-tac-toe_Boost

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  docker-compose.yml  test_runner.sh
cmake/: boost.cmake  jwt-cpp.cmake  nlohmann_json.cmake  redis-plus-plus.cmake
src/: main.cpp
src/exceptions/: conflict_exception.h
src/handlers/: NotFoundHandler.h  base_handler.cpp  base_handler.h  get_id_handler.h  handler.h  handlers.h  id_handler.h  main_handler.cpp  main_handler.h  not_found_handler.cpp  not_found_handler.h  notify_handler.cpp  notify_handler.h
src/handlers/game/: create_game_handler.cpp  create_game_handler.h  game_handlers.h  join_game_handler.cpp  join_game_handler.h  remove_game_handler.cpp  remove_game_handler.h
src/handlers/move/: make_move_handler.cpp  make_move_handler.h  move_handlers.h
src/repositories/: Redis_repos.cpp  Redis_repos.h  game_repository.cpp  game_repository.h  matchmaking_repository.cpp  matchmaking_repository.h  redis_repository.cpp  redis_repository.h
src/routes/: i_route_registrar.h  route_registry.cpp  route_registry.h  router.cpp  router.h  routes.cpp  routes.h
src/services/: Service.h  game_service.cpp  game_service.h  matchmaking_service.cpp  matchmaking_service.h  move_service.h  notification_service.cpp  notification_service.h  service.cpp  service.h
src/session/: session.cpp  session.h
src/session_manager/: session_manager.cpp  session_manager.h
src/tcp_server/: server.cpp  server.h  tcp_server.cpp  tcp_server.h
src/utils/: HttpRequest.h  generate_uuid.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  jwt_token.cpp  jwt_token.h  matchmaking_sesion.h  redis_client_factory.cpp  redis_client_factory.h  uuid_generator.h
tests/: matchmaking.py  send_func.py
tests/matchmaking/: game_creation_tests.py  game_join_tests.py  game_removal_tests.py
